--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
     <div id="header">
         <video class="bg-video" autoplay muted loop>
-            <source src="img/Colunas - 17257.mp4">
+            <source src="img/xadrez.mp4">
         </video>
         <div class="menu-list">
             <div>
@@ -44,25 +44,28 @@
             <p><a class="link" href="#noticias">Artigos</a></p>
             <p><a class="link" href="#info">Contato</a></p>
         </div>
-        <img src="img/Rectangle 1.png" alt="sombra" class="sombra">
-        <img src="img/Camada 31.png" alt="logo" class="logo">
+        <div class="sombra"></div>
+        <!-- <img src="img/Rectangle 1.png" alt="sombra" class="sombra"> -->
+        <div class="loguinho"><img src="img/Camada 31.png" alt="logo" class="logo"></div>
         <img src="img/Camada 12.png" alt="menu" class="menu">
     </div>
     <div class="about" id="sobre">
         <img src="img/Forma 5.png" alt="forma1" class="forma1">
         <h2>Um escritório de advocacia com tradição e espírito inovador</h2>
         <p>
-            O Escritório de Advocacia MHC Advogados é formado por um núcleo de profissionais que, mediante parcerias
-            <br>
-            estratégicas, atuam em conjunto desde 2014, nos ramos de Direito Público, Eleitoral, Cível e Empresarial
-            <br>
-            Trabalhista, nas esferas administrativa e judicial. <br>
-            <br>
-            Incorporando os recursos tecnológicos mais avançados em sua rotina, o escritório visa realizar atendimento
-            <br>
-            personalizado e exclusivo aos seus clientes, na orientação segura à luz do ordenamento jurídico, através de
-            <br>
-            uma relação de confiança e transparência.
+            O Escritório de Advocacia MHC Advogados é formado por um 
+            núcleo de profissionais com intensa  experiência na 
+            administração pública e que, mediante parcerias
+            estratégicas, atua em conjunto desde  2014, nos ramos de 
+            Direito Público, Eleitoral, Material e Processual Civil, nas 
+            esferas  administrativa e judicial. 
+            <br> <br>
+            Incorporando os recursos tecnológicos mais avançados em sua     
+            rotina, o Escritório possui expertise  no gerenciamento de
+            questões jurídicas complexas, tendo por objetivo o
+            atendimento personalizado e  exclusivo aos seus clientes, com 
+            orientação segura à luz do ordenamento jurídico, através de 
+            uma relação de confiança e transparência. 
 
         </p>
         <img src="img/Forma 5.png" alt="forma2" class="forma2">
