--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="owl-carousel owl-theme" id="team">
                     <div class="item">
                         <div class="pessoa">
-                            <a href="arquivos/Currículo_Mateus.pdf" data-fancybox>
+                            <a href="#equipe">
                                 <img src="img/mateus.jpg" alt="Mateus">
                                 <h1>Mateus Henrique de Carvalho</h1>
                                 <p>mateusdecarvalho@mhcadvogados.com</p>
@@ -107,7 +107,7 @@
                     </div>
                     <div class="item">
                         <div class="pessoa">
-                            <a href="arquivos/Currículo_Jamile.pdf" data-fancybox>
+                            <a href="#equipe">
                                 <img src="img/Camada 15.png" alt="Jamile">
                                 <h1>Jamile Busatto Chedid</h1>
                                 <p>jamilechedid@mhcadvogados.com</p>
