--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="loc">
             <div class="onde">
                 <h1>Fale Conosco:</h1>
-                <form id="form" action="index.html" method="post">
+                <form id="form" action="enviar.php" method="post">
                     <div class="campo"><input type="text" name="nome" id="nome" placeholder="Nome:"></div>
                     <div class="campo"><input type="mail" name="email" id="email" placeholder="Email:"></div>
                     <div class="campo"><textarea name="msg" id="msg" placeholder="Mensagem:"></textarea></div>
