--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
     </div>
     <div class="we" id="equipe">
         <h1>Nossa Equipe</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
             commodo consequat. Duis aute irure dolor in.
-        </p>
+        </p> -->
         <div class="partners">
             <div class="people">
                 <div class="owl-carousel owl-theme" id="team">
