menu-scroll added

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
         <!-- <img src="img/Rectangle 1.png" alt="sombra" class="sombra"> -->
         <div class="loguinho"><img src="img/Camada 31.png" alt="logo" class="logo"></div>
         <img src="img/Camada 12.png" alt="menu" class="menu">
+        <div class="menu-scroll remove">
+            <p><a class="link" href="#sobre">Quem somos</a></p>
+            <p><a class="link" href="#servicos">Áreas de atuação</a></p>
+            <p><a class="link" href="#equipe">Nossa Equipe</a></p>
+            <p><a class="link" href="#noticias">Artigos</a></p>
+            <p><a class="link" href="#info">Contato</a></p>
+        </div>
     </div>
     <div class="about" id="sobre">
         <img src="img/Forma 5.png" alt="forma1" class="forma1">
