social medias added

--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
                                 <h1>Mateus Henrique de Carvalho</h1>
                                 <p>Advogado</p>
                                 <p>OAB/RS 78.524</p>
+                                <div class="redes-contato">
+                                    <a href=""><img src="img/insta.png" alt="insta"></a>
+                                    <a href=""><img src="img/face.png" alt="face"></a>
+                                    <a href=""><img src="img/linkedin.png" alt="linkedin"></a>
+                                </div>
                             </a>
                         </div>
                     </div>
@@ -119,6 +124,11 @@
                                 <h1>Jamile Busatto Chedid</h1>
                                 <p>Advogada</p>
                                 <p>OAB/RS 78.111B</p>
+                                <div class="redes-contato">
+                                    <a href=""><img src="img/insta.png" alt="insta"></a>
+                                    <a href=""><img src="img/face.png" alt="face"></a>
+                                    <a href=""><img src="img/linkedin.png" alt="linkedin"></a>
+                                </div>
                             </a>
                         </div>
                     </div>
@@ -128,6 +138,11 @@
                                 <div style="background-image: url(img/dayana.jpeg);" class="foto"></div>
                                 <h1>Dayana Zwicker</h1>
                                 <p>Bacharel em Direito</p>
+                                <div class="redes-contato">
+                                    <a href=""><img src="img/insta.png" alt="insta"></a>
+                                    <a href=""><img src="img/face.png" alt="face"></a>
+                                    <a href=""><img src="img/linkedin.png" alt="linkedin"></a>
+                                </div>
                             </a>
                         </div>
                     </div>
