social-medias updated

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                                 <p>Advogado</p>
                                 <p>OAB/RS 78.524</p>
                                 <div class="redes-contato">
-                                    <a href=""><img src="img/insta.png" alt="insta"></a>
-                                    <a href=""><img src="img/face.png" alt="face"></a>
-                                    <a href=""><img src="img/linkedin.png" alt="linkedin"></a>
+                                    <a href="mailto:mateusdecarvalho@mhcadvogados.com"><img src="img/mail-icon.png" alt="mail-icon" target="_blank"></a>
+                                    <a href="https://wa.me/5551992044497?text=Ol%C3%A1%2C%20estou%20entrando%20em%20contato%20atrav%C3%A9s%20do%20site%20MHC%20Advogados%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." target="_blank"><img src="img/whats-icon.png" alt="whats-icon"></a>
+                                    <a href="https://www.linkedin.com/in/mateus-henrique-de-carvalho-485084254/" target="_blank"><img src="img/linkedin.png" alt="linkedin"></a>
                                 </div>
                             </a>
                         </div>
@@ -125,9 +125,9 @@
                                 <p>Advogada</p>
                                 <p>OAB/RS 78.111B</p>
                                 <div class="redes-contato">
-                                    <a href=""><img src="img/insta.png" alt="insta"></a>
-                                    <a href=""><img src="img/face.png" alt="face"></a>
-                                    <a href=""><img src="img/linkedin.png" alt="linkedin"></a>
+                                    <a href="mailto:jamilechedid@mhcadvogados.com"><img src="img/mail-icon.png" alt="mail-icon" target="_blank"></a>
+                                    <a href="https://wa.me/5551982275353?text=Ol%C3%A1%2C%20estou%20entrando%20em%20contato%20atrav%C3%A9s%20do%20site%20MHC%20Advogados%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." target="_blank"><img src="img/whats-icon.png" alt="whats-icon"></a>
+                                    <a href="https://www.linkedin.com/in/jamile-busatto-chedid-238141249/" target="_blank"><img src="img/linkedin.png" alt="linkedin"></a>
                                 </div>
                             </a>
                         </div>
@@ -139,9 +139,9 @@
                                 <h1>Dayana Zwicker</h1>
                                 <p>Bacharel em Direito</p>
                                 <div class="redes-contato">
-                                    <a href=""><img src="img/insta.png" alt="insta"></a>
-                                    <a href=""><img src="img/face.png" alt="face"></a>
-                                    <a href=""><img src="img/linkedin.png" alt="linkedin"></a>
+                                    <a href="mailto:dayanazwicker@mhcadvogados.com"><img src="img/mail-icon.png" alt="mail-icon" target="_blank"></a>
+                                    <a href="https://wa.me/5548999180006?text=Ol%C3%A1%2C%20estou%20entrando%20em%20contato%20atrav%C3%A9s%20do%20site%20MHC%20Advogados%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." target="_blank"><img src="img/whats-icon.png" alt="whats-icon"></a>
+                                    <a href="https://www.linkedin.com/in/dayana-zwicker-85a222254/" target="_blank"><img src="img/linkedin.png" alt="linkedin"></a>
                                 </div>
                             </a>
                         </div>
@@ -204,7 +204,7 @@
                     <div class="campo"><textarea name="msg" id="msg" placeholder="Mensagem:"></textarea></div>
                     <input class="input-btn" type="submit" value="Enviar">
                 </form>
-                <img src="img/redes.png" alt="redes" class="redes">
+                <!-- <img src="img/redes.png" alt="redes" class="redes"> -->
             </div>
             <div class="local">
                 <img src="img/Camada 20.png" alt="loc" class="loc-img">
