--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </div>
             <p><a class="link" href="#sobre">Quem somos</a></p>
             <p><a class="link" href="#servicos">Áreas de atuação</a></p>
-            <p><a class="link" href="#equipe">Nossa Equipe</a></p>
-            <p><a class="link" href="#noticias">Artigos</a></p>
+            <p><a class="link" href="#equipe">Profissional</a></p>
+            <!-- <p><a class="link" href="#noticias">Artigos</a></p> -->
             <p><a class="link" href="#info">Contato</a></p>
         </div>
         <div class="sombra"></div>
@@ -51,8 +51,8 @@
         <div class="menu-scroll remove">
             <p><a class="link" href="#sobre">Quem somos</a></p>
             <p><a class="link" href="#servicos">Áreas de atuação</a></p>
-            <p><a class="link" href="#equipe">Nossa Equipe</a></p>
-            <p><a class="link" href="#noticias">Artigos</a></p>
+            <p><a class="link" href="#equipe">Profissional</a></p>
+            <!-- <p><a class="link" href="#noticias">Artigos</a></p> -->
             <p><a class="link" href="#info">Contato</a></p>
         </div>
     </div>
@@ -185,7 +185,7 @@
             </div>
         </div>
     </div>
-    <div class="notices" id="noticias">
+    <!-- <div class="notices" id="noticias">
         <img src="img/Rectangle 1.png" alt="sombra" class="sombra2">
         <img src="img/Forma 5.png" alt="forma1" class="forma3">
         <div class="box">
@@ -225,7 +225,7 @@
             </div>
         </div>
         <img src="img/Forma 5.png" alt="forma1" class="forma4">
-    </div>
+    </div> -->
     <div class="icon">
         <a href="#header"><img src="img/icon.png" alt="icone"></a>
     </div>
