--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 
                     container.innerHTML = `
-                        <img src="${pessoa["imagem"]}" alt="${pessoa["nome"]}" />
+                        <img src="${pessoa["imagem"]}" alt="${pessoa["nome"]}" class="foto-mateus" />
                         <div>
                             <h1>${pessoa["nome"]}</h1>
                             <h1>${pessoa["cargo"]} ${pessoa['oab'] ? `- ${pessoa["oab"]}` : ""} </h1>
