--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
     <div id="header">
         <video class="bg-video" autoplay muted loop>
-            <source src="img/xadrez.mp4">
+            <source src="img/Colunas - 17257.mp4">
         </video>
         <div class="menu-list">
             <div>
@@ -63,7 +63,7 @@
             O Escritório de Advocacia MHC Advogados é formado por um
             núcleo de profissionais com intensa experiência na
             administração pública e que, mediante parcerias
-            estratégicas, atua em conjunto desde 2014, nos ramos de
+            estratégicas, atua em conjunto desde 2012, nos ramos de
             Direito Público, Eleitoral, Material e Processual Civil, nas
             esferas administrativa e judicial.
             <br> <br>
