--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p><a class="link" href="#info">Contato</a></p>
         </div>
         <div class="sombra"></div>
-        <!-- <img src="img/Rectangle 1.png" alt="sombra" class="sombra"> -->
+        <img src="img/Rectangle 1.png" alt="sombra" class="sombra">
         <div class="loguinho"><img src="img/Camada 31.png" alt="logo" class="logo"></div>
         <img src="img/Camada 12.png" alt="menu" class="menu">
         <div class="menu-scroll remove">
